# gecko

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  TODO.md  TODO_WRITERS.md  sonar-project.properties  vcpkg.json
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  version.h.in
src/cli/: BundledResources.cpp  BundledResources.h  ConfigLoad.h  Endings.cpp  Endings.h  FrmInspect.cpp  FrmInspect.h  GlobalVars.cpp  GlobalVars.h  GvarRefs.cpp  GvarRefs.h  MapAnalyzer.cpp  MapAnalyzer.h  MapDescribe.cpp  MapDescribe.h  MapGenerator.cpp  MapGenerator.h  MapGraph.cpp  MapGraph.h  MapLoad.cpp  MapLoad.h  MapReachability.cpp  MapReachability.h  MapRender.cpp  MapRender.h  PatternExtract.cpp  PatternExtract.h  PatternJson.cpp  PatternJson.h  Quests.cpp  Quests.h  ResourceInspect.cpp  ResourceInspect.h  ScriptIntrospect.cpp  ScriptIntrospect.h  WorldEncounters.cpp  WorldEncounters.h  WorldMap.cpp  WorldMap.h  main.cpp
src/editor/: FloorSynth.cpp  FloorSynth.h  Hex.h  HexGeometry.h  HexagonGrid.cpp  HexagonGrid.h  Object.cpp  Object.h  Reachability.cpp  Reachability.h  TileChange.h
src/format/: IFile.h
src/mcp/: Base64.cpp  Base64.h  McpServer.cpp  McpServer.h  main.cpp
src/pattern/: FillLibrary.cpp  FillLibrary.h  FillPlan.h  Pattern.h  PatternBuilder.cpp  PatternBuilder.h  PatternLibrary.cpp  PatternLibrary.h  PatternSerializer.cpp  PatternSerializer.h  PatternSprite.cpp  PatternSprite.h  PatternStamper.cpp  PatternStamper.h  PatternThumbnail.cpp  PatternThumbnail.h  PlacementBatch.cpp  PlacementBatch.h  ThumbnailComposer.cpp  ThumbnailComposer.h
src/reader/: BinaryUtils.h  ErrorMessages.h  FileParser.h  FormatValidator.h  IniParser.h  ReaderDiagnostics.h  ReaderExceptions.h  ReaderFactory.cpp  ReaderFactory.h  StreamBuffer.cpp  StreamBuffer.h  TextParsing.h  UnifiedReaderFactory.h
src/rendering/: HexRenderer.cpp  HexRenderer.h  MapEdgeOverlayGeometry.h  MapRenderer.cpp  MapRenderer.h  MapSpriteLoader.cpp  RenderingEngine.cpp  RenderingEngine.h  ToolPreview.h
src/resource/: AiTxtLoader.h  CritterFrmResolver.cpp  DataFileSystem.cpp  DataFileSystem.h  FrmResolver.cpp  FrmResolver.h  GameResources.cpp  GameResources.h  IResourceLoader.h  IResourceProvider.h  MapCompleteness.cpp  MapCompleteness.h  MapNameEditor.cpp  MapNameEditor.h  MapNameResolver.cpp  MapNameResolver.h  PathUtils.h  README.md  ResourceInitializer.cpp  ResourcePaths.h  ResourceRepository.cpp  ResourceRepository.h  ScriptNames.h  ScriptSourceLocator.cpp  ScriptSourceLocator.h  TextureManager.cpp  TextureManager.h  WritableDataRoot.cpp  WritableDataRoot.h
src/scripting/: EditArea.h  LuaSandboxHost.cpp  LuaSandboxHost.h  LuaScriptRuntime.cpp  LuaScriptRuntime.h  MapScriptApi.cpp  MapScriptApi.h  PluginVm.cpp  PluginVm.h  ScriptApiReference.cpp  ScriptApiReference.h  ScriptTypes.h
src/selection/: SelectionBridge.cpp  SelectionBridge.h  SelectionDataProvider.h  SelectionManager.cpp  SelectionManager.h  SelectionState.cpp  SelectionState.h
src/state/: ConfigurationState.cpp  EditorState.cpp  EditorState.h  GameLauncher.cpp  GameLauncher.h  MapSaveService.cpp  MapSaveService.h  SslToolchain.cpp  SslToolchain.h
src/ui/: DataPathsWidget.cpp  DataPathsWidget.h  EditorWidget.cpp  EditorWidget.h  ExternalEditorLauncher.cpp  ExternalEditorLauncher.h  FileBrowserPanel.cpp  FileBrowserPanel.h  FrmSelectorDialog.cpp  FrmThumbnailGenerator.h  GameEnums.cpp  GameEnums.h  GameLocationWidget.cpp  GameLocationWidget.h  IconHelper.h  LoadingWidget.cpp  LoadingWidget.h  MainWindow.cpp  MainWindow.h  MapInfoPanel.cpp  MapInfoPanel.h  ObjectPalettePanel.cpp  ObjectPalettePanel.h  Qt6MapInfoPanel.cpp  Qt6MapInfoPanel.h  Qt6SelectedObjectPanel.cpp  Qt6SelectedObjectPanel.h  QtDialogs.h  ResourceInitializer.cpp  SFMLWidget.cpp  SFMLWidget.h  ScriptSourceService.cpp  ScriptSourceService.h  SelectedObjectPanel.cpp  SelectedObjectPanel.h  SelectedTilePanel.cpp  SelectedTilePanel.h  SelectionPanel.cpp  SelectionPanel.h  Settings.cpp  (+9 more)
src/util/: AmmoCaliberNames.cpp  AmmoCaliberNames.h  BuiltTile.h  ColorUtils.h  Constants.h  Coordinates.cpp  Coordinates.h  CritterFrmResolver.cpp  CritterFrmResolver.h  EventBus.h  Exceptions.h  ExitGridDirection.h  ExitGridRuns.h  ExternalEditorLauncher.cpp  ExternalEditorLauncher.h  Factory.h  FalloutEngineEnums.h  FileIo.h  FrmThumbnailGenerator.cpp  FrmThumbnailGenerator.h  GameDataPathResolver.cpp  GameDataPathResolver.h  HexLine.h  MessageEnumUtils.cpp  MessageEnumUtils.h  PathUtils.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PolygonGeometry.h  ProHelper.cpp  ProHelper.h  QtDialogs.cpp  QtDialogs.h  ResourceInitializer.cpp  ResourceInitializer.h  ResourceManager.cpp  ResourceManager.h  ResourcePaths.h  Settings.cpp  Settings.h  (+10 more)
src/vfs/: Dat2File.hpp  Dat2FileSystem.hpp  VfsppNativeFileSystem.h  VirtualFileSystemExtended.cpp  VirtualFileSystemExtended.h
src/viewport/: EdgeScroll.cpp  EdgeScroll.h  ViewportController.cpp  ViewportController.h
src/writer/: BinaryWriteUtils.h  FileWriter.h  WriterExceptions.h  WriterFactory.cpp  WriterFactory.h
tests/: CMakeLists.txt  test_advanced_components.cpp  test_tile_utils.cpp
tests/data/: .gitattributes
tests/general/: test_ai_txt.cpp  test_ammo_caliber_names.cpp  test_animation_layout.cpp  test_city_txt.cpp  test_coordinates.cpp  test_dat_concurrency.cpp  test_ddraw_ini.cpp  test_edge_edit_service.cpp  test_edge_scroll.cpp  test_endgame_txt.cpp  test_exit_grid_direction.cpp  test_exit_grid_runs.cpp  test_fallout_engine_enums.cpp  test_fill_plan.cpp  test_floor_synth.cpp  test_frm_inspect.cpp  test_frm_resolver.cpp  test_gam_roundtrip.cpp  test_game_data_path_resolver.cpp  test_gvar_refs.cpp  test_hex_geometry.cpp  test_hex_line.cpp  test_hexagon_grid.cpp  test_lua_script_runtime.cpp  test_map_analyzer_adjacency.cpp  test_map_analyzer_scripts.cpp  test_map_completeness.cpp  test_map_dump_grid.cpp  test_map_edge_roundtrip.cpp  test_map_factory.cpp  test_map_generator.cpp  test_map_graph.cpp  test_map_name_editor.cpp  test_map_name_resolver.cpp  test_map_object_defaults.cpp  (+47 more)
(+389 files in other folders)
